# COMP6991

./: .gitignore
ortalab/: autotest.tar  mark_request.txt
ortalab/src/: cards.rs  jokers.rs  main.rs  scorer.rs
ortalab/src/jokers/: abstract_joker.rs  baron.rs  blackboard.rs  blueprint.rs  clever_joker.rs  crafty_joker.rs  crazy_joker.rs  devious_joker.rs  droll_joker.rs  even_steven.rs  fibonacci.rs  flower_pot.rs  four_fingers.rs  gluttonous_joker.rs  greedy_joker.rs  joker.rs  jolly_joker.rs  lusty_joker.rs  mad_joker.rs  mime.rs  mod.rs  odd_todd.rs  pareidolia.rs  photograph.rs  raised_fist.rs  scary_face.rs  shortcut.rs  sly_joker.rs  smeared_joker.rs  smiley_face.rs  sock_and_buskin.rs  splash.rs  wily_joker.rs  wrathful_joker.rs  zany_joker.rs
rsheet/: mark_request.txt
rsheet/src/: commands.rs  connection.rs  lib.rs  parsing.rs  server.rs  spreadsheet.rs  worker.rs
rsheet/src/server/: commands.rs  connection.rs  mod.rs  server.rs
rsheet/src/spreadsheet/: graph.rs  mod.rs  spreadsheet.rs  variables.rs  worker.rs
week02/exercises_02_starter/data_analysis/: Cargo.toml
week02/ws02 2/: file.txt
week02/ws02 2/src/: main.rs
week03/workshop/src/: main.rs
week07/tut07/: Cargo.toml
week10/exam_q1_25T1/: q1_2.txt  q1_4.txt
week10/exam_q2_24T3/: Cargo.toml
week10/exam_q2_24T3/src/: main.rs
week10/exam_q2_25T1/: Cargo.toml
week10/exam_q4_24T3/: q4_3.txt
week10/exam_q4_25T1/: q4_3.txt
week10/exam_q5_24T3/: Cargo.toml
week10/exam_q5_25T1/: Cargo.toml
week10/exam_q5_25T1/src/: lib.rs  main.rs  main_alt1.rs  main_alt2.rs  main_alt3.rs
(+52 files in other folders)
